spot api update
