# api/routes/spot.go
@@ -9,10 +9,10 @@ import (
 )
 
 func SpotRouter(app fiber.Router, service spot.Service) {
+	app.Get("/spot", handlers.GetAllSpots(service))
 	app.Get("/spot/me", middleware.Protected(), handlers.GetMySpots(service))
 	app.Get("/spot/:id", middleware.Protected(), handlers.GetSpot(service))
 	app.Put("/spot/:id", middleware.Protected(), handlers.UpdateSpot(service))
-	app.Patch("/spot/:id", handlers.PartialUpdateSpot(service))
 	app.Post("/spot", middleware.Protected(), handlers.AddSpot(service))
-	app.Delete("/spot/:id", handlers.RemoveSpot(service))
+	app.Delete("/spot/:id", middleware.Protected(), handlers.RemoveSpot(service))
 }
